--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Way to GO</title>
+	<title>Ying Portfolio</title>
 </head>
 <body>
-	Way to GOWay to GOWay to GO
-</body>
+	<p>This is a page about me, for what i do and learn for the future of skills.</p>
 </html>
