--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 	<title>Ying Portfolio</title>
 </head>
 <body>
+	<h1>Ivy Hsu</h1>
+	<h3>HTML/CSS/JavaScript/Python/Postman/Selenium/Robot Framework</h3>
 	<p>This is a page about me, for what i do and learn for the future of skills.</p>
 </html>
