--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
-	<title>Ying Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<!--font style-->
+	<link href="https://fonts.googleapis.com/css?family=Advent+Pro&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/
+	css?family=Open+Sans|Roboto|Rock+Salt&display=swap" rel="stylesheet">
+	<!--font style-->
+	<title>Ying</title>
 </head>
 <body>
-	<h1>Ying Way</h1>
-	<h3>HTML/CSS/JavaScript/Python/Postman/Selenium/Robot Framework</h3>
-	<p>This is a page about me, for what i do and learn for the future of skills.</p>
+	<header>
+
+	</header>
+	<nav>
+		
+	</nav>
+	<aside>
+		<a href=""><button id="btn01"><h1>HTML/CSS</h1></button></a>
+		<a href=""><button id="btn02"><h1>JavaScript</h1></button></a>
+		<a href=""><button id="btn03"><h1>Python</h1></button></a>
+		<a href=""><button id="btn04"><h1>Postman</h1></button></a>
+		<a href=""><button id="btn05"><h1>Selenium</h1></button></a>
+		<a href=""><button id="btn06"><h1>Robot Framework</h1></button></a>
+	<!--	<a href=""><button id="btn07"><h1>Katalon</h1></button></a>  -->
+	</aside>
+	<main>
+		<h1 id="website">Ying Portfolio</h1>
+		<h3>HTML/CSS/JavaScript/Python/Postman/Selenium/Robot Framework</h3>
+		<p>sdfsdf</p>
+
+	</main>
+	<footer>
+		
+	</footer>
+</body>
 </html>
