--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!--font style-->
 	<link href="https://fonts.googleapis.com/css?family=Advent+Pro&display=swap" rel="stylesheet">
@@ -11,7 +12,8 @@
 </head>
 <body>
 	<header>
-
+		<h1 id="website">Ying Portfolio</h1>
+		<!--<h3>HTML/CSS/JavaScript/Python/Postman/Selenium/Robot Framework</h3>-->
 	</header>
 	<nav>
 		
@@ -20,16 +22,15 @@
 		<a href=""><button id="btn01"><h1>HTML/CSS</h1></button></a>
 		<a href=""><button id="btn02"><h1>JavaScript</h1></button></a>
 		<a href=""><button id="btn03"><h1>Python</h1></button></a>
-		<a href=""><button id="btn04"><h1>Postman</h1></button></a>
+<!-- 	<a href=""><button id="btn04"><h1>Postman</h1></button></a>
 		<a href=""><button id="btn05"><h1>Selenium</h1></button></a>
-		<a href=""><button id="btn06"><h1>Robot Framework</h1></button></a>
-	<!--	<a href=""><button id="btn07"><h1>Katalon</h1></button></a>  -->
+		<a href=""><button id="btn06"><h1>Framework</h1></button></a>
+		<a href=""><button id="btn07"><h1>Katalon</h1></button></a> -->
 	</aside>
 	<main>
-		<h1 id="website">Ying Portfolio</h1>
-		<h3>HTML/CSS/JavaScript/Python/Postman/Selenium/Robot Framework</h3>
-		<p>sdfsdf</p>
-
+		<p id="self">
+			My name is Ying. I started as a Quality Assurance Engineer. Now, i am working though the path of PYTHON engineer. Click the skill test button and see if you also have the knowledge.
+		</p>
 	</main>
 	<footer>
 		
